# MicroFlash

./: Readme.md  flash.py  inverse_kinematics.py  lol.py  pyproject.toml
firmware/: adc_read.py  blink.py  boot.py  main.py  servo.py
