[tool.poetry]
name = "packages"
version = "0.1.0"
description = "Packages for running program properly"
authors = ["Laskoski <piotr.laskowski@kneiti.prz.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
